# Read_Books

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Backend/: crud.py  database.py  example.env  models.py  requirements.txt  router.py  schemas.py
Frontend/: Dockerfile  app.py
